RM2-3 can be splitted